Sun Jun 16 02:04:40 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* gc.c (gc_prof_timer_stop): Merge function codes of GC_PROFILE_MORE_DETAIL and !GC_PROFILE_MORE_DETAIL.
	* gc.c (gc_prof_mark_timer_start): Ditto. 
	* gc.c (gc_prof_mark_timer_stop): Ditto.
	* gc.c (gc_prof_sweep_slot_timer_start): Ditto.
	* gc.c (gc_prof_sweep_slot_timer_stop): Ditto.
	* gc.c (gc_prof_set_malloc_info): Ditto.
	* gc.c (gc_prof_set_heap_info): Ditto.

Sat Jun 15 23:50:24 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_sub): New function.
	  (absint_numwords_generic): Use bary_sub.
	  (bigsub_core): Skip unnecessary copy.

Sat Jun 15 22:05:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): New function.
	  (absint_numwords_generic): Use bary_mul.
	  (bary_mul_single): Extracted from bigmul1_single.
	  (bary_mul_normal): Extracted from bigmul1_normal.

Sat Jun 15 20:13:46 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_unpack): Extracted from rb_integer_unpack_internal.
	  (absint_numwords_generic): Use bary_unpack.
	  (roomof): Defined.
	  (bdigit_roomof): Defined.
	  (BARY_ARGS): Defined.
	  (bary_unpack): Declared.

Sat Jun 15 19:35:04 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (absint_numwords_bytes): Make it static.
	  (absint_numwords_small): Ditto.
	  (absint_numwords_generic): Ditto.

Sat Jun 15 17:14:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigmul1_normal): Shrink the result Bignum length.

Sat Jun 15 10:19:42 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/bigdecimal.c: Update overview formatting of headers

Sat Jun 15 10:19:06 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/bigdecimal.gemspec: Update authors

Sat Jun 15 10:02:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bdigs_small_rshift): Extracted from big_rshift.
	  (bigdivrem): Use bdigs_small_rshift.

Sat Jun 15 08:37:28 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): propagate absolute path from the